--- a/Math/TriGraph.html
+++ b/Math/TriGraph.html
@@ -26,7 +26,7 @@
                 <h1 class="text-2xl font-bold tracking-tight">三角函数图像生成器</h1>
                 <p class="text-slate-400 text-sm mt-1">可视化学习助手 - 观察角度与函数值的变化</p>
             </div>
-            <!-- 数学公式显示区域：移除全局 italic，改为内部控制 -->
+            <!-- 数学公式显示区域 -->
             <div id="formula-display" class="text-3xl math-font text-blue-400 opacity-90">
                 <i>y</i> = sin(<i>x</i>)
             </div>
@@ -79,10 +79,25 @@
                 </p>
             </div>
         </div>
-    </div>
 
-    <div class="mt-8 text-slate-400 text-xs text-center">
-        推荐横屏浏览以获得最佳体验 • 支持触摸操作
+        <!-- Integrated Footer / Credits Section -->
+        <div class="bg-slate-50 p-6 border-t border-slate-200 flex flex-col items-center justify-center gap-4">
+            <div class="text-slate-400 text-xs text-center">
+                推荐横屏浏览以获得最佳体验 • 支持触摸操作
+            </div>
+            
+            <div class="bg-white border border-gray-200 rounded-full px-5 py-2 flex items-center shadow-sm gap-3 hover:shadow-md transition-shadow duration-300">
+                <img 
+                    src="https://img.calcgospel.top/PicList/202512/c9ba5099657621ce60b55f0cfb0e7457.png" 
+                    alt="Logo" 
+                    class="w-6 h-6 object-contain rounded-full"
+                >
+                <span class="text-xs text-gray-500 font-medium tracking-wide">
+                    微积分福音 卓永鸿老师制作
+                </span>
+            </div>
+        </div>
+
     </div>
 
     <script>
