--- a/FlashCards/JGospel01.html
+++ b/FlashCards/JGospel01.html
@@ -148,8 +148,8 @@
 
             // --- View: Flashcard ---
             appContainer.innerHTML = `
-                <!-- Card Container (Vertical 1:2 Aspect Ratio) -->
-                <div class="w-full aspect-[1/2] relative perspective-1000 cursor-pointer group" onclick="handleFlip()">
+                <!-- Card Container (Adjusted Aspect Ratio) -->
+                <div class="w-full aspect-[5/4] relative perspective-1000 cursor-pointer group" onclick="handleFlip()">
                     <div id="card-inner" class="w-full h-full relative preserve-3d transition-transform shadow-xl rounded-2xl ${isFlipped ? 'rotate-y-180' : ''}">
                         
                         <!-- Front (Question) -->
