--- a/FlashCards/JGospel01.html
+++ b/FlashCards/JGospel01.html
@@ -27,7 +27,7 @@
             min-height: 100vh;
             display: flex;
             flex-direction: column;
-            background-color: #f1f5f9; /* slate-100 */
+            background-color: #9cceec; /* slate-100 */
             color: #0f172a;           /* slate-900 */
             font-family: -apple-system,BlinkMacSystemFont,"PingFang SC",
                 "Hiragino Sans GB","Segoe UI",Roboto,system-ui,sans-serif;
