--- a/FlashCards/JGospel01.html
+++ b/FlashCards/JGospel01.html
@@ -107,16 +107,21 @@
     </main>
 
     <!-- Footer（可按需要删掉） -->
-    <footer class="bg-white border-t border-slate-200 py-3">
-        <div class="max-w-md mx-auto px-4 flex items-center justify-center space-x-2">
-            <img src="https://img.calcgospel.top/PicList/202512/c9ba5099657621ce60b55f0cfb0e7457.png"
-                 alt="微积分福音 Logo"
-                 class="h-5 w-auto">
-            <span class="text-[11px] text-slate-500">
+    <footer class="bg-transparent py-6">
+    <div class="max-w-md mx-auto flex justify-center">
+        <div class="bg-white border border-slate-200 rounded-full px-5 py-2 shadow-sm flex items-center gap-3 hover:shadow-md transition-shadow duration-300">
+            <img 
+                src="https://img.calcgospel.top/PicList/202512/c9ba5099657621ce60b55f0cfb0e7457.png"
+                alt="微积分福音 Logo"
+                class="w-6 h-6 rounded-full object-contain"
+            >
+            <span class="text-xs text-slate-600 tracking-wide">
                 微积分福音 · 卓永鸿老师制作
             </span>
         </div>
-    </footer>
+    </div>
+</footer>
+
 
     <script>
         // --- Data ---
