--- a/FlashCards/JGospel01.html
+++ b/FlashCards/JGospel01.html
@@ -77,28 +77,24 @@
 <body class="text-slate-800">
 
     <!-- Header -->
-    <header class="bg-white border-b border-slate-200 sticky top-0 z-10">
-        <div class="max-w-md mx-auto px-4 h-16 flex items-center justify-between">
-            <div class="flex items-center space-x-3 overflow-hidden">
-                <div class="bg-indigo-600 p-2 rounded-lg shrink-0">
-                    <i data-lucide="book-open" class="w-5 h-5 text-white"></i>
-                </div>
-                <div class="flex flex-col min-w-0">
-                    <span class="text-[11px] text-slate-500 tracking-wide uppercase">
-                        闪卡复习 · 第一部
-                    </span>
-                    <h1 class="text-sm font-semibold text-slate-800 truncate">
-                        《耶稣所传的福音》
-                    </h1>
-                </div>
-            </div>
+    <header class="py-5 bg-white shadow-sm border-b border-slate-200">
+    <div class="max-w-md mx-auto flex items-center justify-center gap-3">
 
-            <div id="progress-text"
-                 class="text-xs font-medium text-slate-600 bg-slate-100 px-3 py-1 rounded-full shrink-0">
-                1 / 17
-            </div>
+        <!-- Icon -->
+        <div class="p-2 bg-blue-50 border border-blue-100 rounded-xl shadow-sm">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-blue-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6l4 2" />
+            </svg>
         </div>
-    </header>
+
+        <!-- Title -->
+        <h1 class="text-xl font-bold text-slate-800 tracking-wide">
+            《耶稣所传的福音》复习闪卡
+        </h1>
+
+    </div>
+</header>
+
 
     <!-- Main -->
     <main id="app-container"
