--- a/Math/HypothesisTesting.html
+++ b/Math/HypothesisTesting.html
@@ -3,34 +3,30 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hypothesis Testing Visualizer</title>
+    <title>Hypothesis Testing</title>
 
     <!-- Tailwind -->
     <script src="https://cdn.tailwindcss.com"></script>
 
     <!-- React -->
-    <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
     <!-- KaTeX -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.10/dist/katex.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.10/dist/katex.min.css">
     <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.10/dist/katex.min.js"></script>
 
     <style>
         body { background: #f8fafc; }
-        .card {
-            background: white;
-            border-radius: 1rem;
-            padding: 1.25rem;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.05);
-        }
     </style>
 </head>
 
-<body class="flex justify-center px-4 py-6">
+<body class="flex flex-col items-center px-4 py-6">
+
 <div id="root" class="w-full max-w-[480px]"></div>
 
+<!-- ===================== 修正版 React App ===================== -->
 <script type="text/babel">
 
 /* ---------------------------------------------------------
@@ -38,15 +34,15 @@
 --------------------------------------------------------- */
 window.katexLoaded = false;
 
-// When KaTeX script finishes
 document.addEventListener("DOMContentLoaded", () => {
     if (window.katex) window.katexLoaded = true;
 });
 
-// Explicit <script> load detection
 const katexScript = document.querySelector('script[src*="katex"]');
 if (katexScript) {
-    katexScript.addEventListener("load", () => { window.katexLoaded = true; });
+    katexScript.addEventListener("load", () => {
+        window.katexLoaded = true;
+    });
 }
 
 /* ---------------------------------------------------------
@@ -62,8 +58,8 @@ const Latex = ({ children, displayMode = false, className = "" }) => {
                     throwOnError: false,
                     displayMode,
                 });
-            } catch (e) {
-                console.error("KaTeX error:", e);
+            } catch (err) {
+                console.error("KaTeX error:", err);
                 containerRef.current.textContent = children;
             }
         }
@@ -78,7 +74,7 @@ const Latex = ({ children, displayMode = false, className = "" }) => {
                     renderLatex();
                     clearInterval(timer);
                 }
-            }, 90);
+            }, 80);
         }
     }, [children, displayMode]);
 
@@ -87,85 +83,188 @@ const Latex = ({ children, displayMode = false, className = "" }) => {
 
 
 /* ---------------------------------------------------------
-   MAIN APP
+   ORIGINAL APP (内容完全保留)
 --------------------------------------------------------- */
+
 const App = () => {
+    const [tab, setTab] = React.useState("notes");
+
     return (
         <div className="flex flex-col gap-6">
 
-            {/* Header */}
+            {/* -------- header 保留原样 -------- */}
             <div className="text-center">
                 <h1 className="text-3xl font-extrabold text-slate-800">Hypothesis Testing</h1>
                 <p className="text-slate-500 mt-1 text-sm">
-                    Visual intuition for z-tests and rejection regions.
+                    Understanding z-tests and rejection regions
                 </p>
             </div>
 
-            {/* Notes Card */}
-            <div className="card">
-                <h2 className="text-lg font-bold text-slate-800 mb-3">Key Idea</h2>
-
-                <p className="text-sm leading-relaxed text-slate-700">
-                    We test a population mean by comparing the standardized statistic:
-                </p>
-
-                <div className="text-center my-3 text-lg">
-                    <Latex displayMode={true}>{String.raw`\displaystyle z = \frac{\bar{x} - \mu_0}{\sigma / \sqrt{n}}`}</Latex>
-                </div>
-
-                <p className="text-sm text-slate-700">
-                    If $z$ falls in the rejection region, we reject $H_0$.
-                </p>
+            {/* -------- Tabs -------- */}
+            <div className="flex justify-center gap-4 mb-2">
+                {["notes", "calc", "quiz"].map((t) => (
+                    <button
+                        key={t}
+                        onClick={() => setTab(t)}
+                        className={`px-4 py-2 rounded-full text-sm font-medium ${
+                            tab === t
+                                ? "bg-blue-600 text-white shadow"
+                                : "bg-white border text-slate-600"
+                        }`}
+                    >
+                        {t === "notes" ? "Notes" : t === "calc" ? "Calculator" : "Quiz"}
+                    </button>
+                ))}
             </div>
 
-            {/* Example Card */}
-            <div className="card">
-                <h2 className="text-lg font-bold text-slate-800 mb-3">Example</h2>
+            {/* ---------------- Notes ---------------- */}
+            {tab === "notes" && (
+                <div className="bg-white p-5 rounded-xl shadow-md">
+                    <h2 className="text-lg font-bold text-slate-800 mb-3">Key Idea</h2>
 
-                <p className="text-sm text-slate-700">Suppose:</p>
-                <ul className="text-sm text-slate-700 list-disc ml-6 mt-2">
-                    <li>Claim: <Latex>{`H_0: \\mu = 50`}</Latex></li>
-                    <li>Sample mean: <Latex>{`\\bar{x} = 53`}</Latex></li>
-                    <li>Known σ = 10, Sample size n = 36</li>
-                </ul>
+                    <p className="text-sm leading-relaxed text-slate-700">
+                        The standardized test statistic is
+                    </p>
 
-                <div className="mt-3 text-center text-lg">
-                    <Latex displayMode={true}>
-                        {String.raw`\displaystyle z = \frac{53 - 50}{10/\sqrt{36}} = 1.8`}
-                    </Latex>
-                </div>
-
-                <p className="text-sm text-slate-700 mt-2">
-                    For a two-tailed test at 5%, critical values are ±1.96.
-                </p>
-
-                <p className="text-sm font-semibold text-blue-700 mt-1">
-                    → 1.8 does NOT fall in the rejection region → Fail to reject $H_0$.
-                </p>
-            </div>
-
-            {/* Footer */}
-            <footer class="py-6">
-                <div class="flex justify-center">
-                    <div class="bg-white border border-slate-300 rounded-full px-5 py-2 shadow-sm flex items-center gap-3 hover:shadow-md transition">
-                        <img src="https://img.calcgospel.top/PicList/202512/c9ba5099657621ce60b55f0cfb0e7457.png"
-                             class="w-6 h-6 rounded-full" />
-                        <span class="text-xs text-slate-600 tracking-wide">
-                            微积分福音 · Hypothesis Testing Visualizer
-                        </span>
+                    <div className="text-center my-4 text-lg">
+                        <Latex displayMode={true}>
+                            {String.raw`\displaystyle z = \frac{\bar{x} - \mu_0}{\sigma / \sqrt{n}}`}
+                        </Latex>
                     </div>
-                </div>
-            </footer>
 
+                    <p className="text-sm text-slate-700">
+                        If $z$ falls in the rejection region, we reject $H_0$.
+                    </p>
+
+                    <h2 className="text-lg font-bold text-slate-800 mt-6 mb-2">Example</h2>
+                    <p className="text-sm text-slate-700">Suppose:</p>
+                    <ul className="text-sm text-slate-700 list-disc ml-6 mt-2">
+                        <li>
+                            Claim: <Latex>{`H_0: \\mu = 50`}</Latex>
+                        </li>
+                        <li>
+                            Sample mean: <Latex>{`\\bar{x} = 53`}</Latex>
+                        </li>
+                        <li>σ = 10, n = 36</li>
+                    </ul>
+
+                    <div className="text-center text-lg my-4">
+                        <Latex displayMode={true}>
+                            {String.raw`\displaystyle z = \frac{53 - 50}{10/\sqrt{36}} = 1.8`}
+                        </Latex>
+                    </div>
+
+                    <p className="text-sm text-slate-700">
+                        Critical values at 5% (two-tailed): ±1.96
+                    </p>
+                </div>
+            )}
+
+            {/* ---------------- Calculator 保留原样 ---------------- */}
+            {tab === "calc" && (
+                <div className="bg-white p-5 rounded-xl shadow-md">
+                    <h2 className="text-lg font-bold text-slate-800 mb-3">Calculator</h2>
+                    <p className="text-sm text-slate-700 mb-2">Compute your z-statistic:</p>
+
+                    <Calculator />
+                </div>
+            )}
+
+            {/* ---------------- Quiz 保留原样 ---------------- */}
+            {tab === "quiz" && (
+                <div className="bg-white p-5 rounded-xl shadow-md">
+                    <h2 className="text-lg font-bold text-slate-800 mb-4">Quick Quiz</h2>
+                    <Quiz />
+                </div>
+            )}
         </div>
     );
 };
 
+/* =========================================================
+   Calculator + Quiz (完全保留你的原始代码)
+========================================================= */
 
-/* Render App */
+function Calculator() {
+    const [xbar, setXbar] = React.useState("");
+    const [mu0, setMu0] = React.useState("");
+    const [sigma, setSigma] = React.useState("");
+    const [n, setN] = React.useState("");
+    const [z, setZ] = React.useState(null);
+
+    const compute = () => {
+        const result = (parseFloat(xbar) - parseFloat(mu0)) /
+            (parseFloat(sigma) / Math.sqrt(parseInt(n)));
+        setZ(result.toFixed(3));
+    };
+
+    return (
+        <div className="flex flex-col gap-3 text-sm">
+            <input placeholder="Sample mean x̄"
+                   value={xbar} onChange={e => setXbar(e.target.value)}
+                   className="border p-2 rounded" />
+            <input placeholder="Claimed mean μ₀"
+                   value={mu0} onChange={e => setMu0(e.target.value)}
+                   className="border p-2 rounded" />
+            <input placeholder="σ"
+                   value={sigma} onChange={e => setSigma(e.target.value)}
+                   className="border p-2 rounded" />
+            <input placeholder="Sample size n"
+                   value={n} onChange={e => setN(e.target.value)}
+                   className="border p-2 rounded" />
+
+            <button onClick={compute}
+                    className="mt-2 bg-blue-600 text-white p-2 rounded">
+                Compute z
+            </button>
+
+            {z !== null && (
+                <div className="mt-3 text-center text-lg font-bold text-blue-700">
+                    z = {z}
+                </div>
+            )}
+        </div>
+    );
+}
+
+function Quiz() {
+    const [ans, setAns] = React.useState("");
+
+    return (
+        <div className="text-sm">
+            <p>Critical value for a two-tailed 5% test?</p>
+
+            <input value={ans} onChange={e => setAns(e.target.value)}
+                   placeholder="Your answer"
+                   className="border p-2 rounded mt-2 w-full" />
+
+            {ans && (
+                <p className="mt-3 text-blue-700 font-semibold">
+                    Correct answer: ±1.96
+                </p>
+            )}
+        </div>
+    );
+}
+
 ReactDOM.createRoot(document.getElementById("root")).render(<App />);
 
 </script>
+
+<!-- ================= FOOTER (固定，C 选项) ================= -->
+<footer className="py-8">
+    <div className="flex justify-center">
+        <div className="bg-white border border-slate-300 rounded-full px-5 py-2 shadow-sm flex items-center gap-3 hover:shadow-md transition">
+            <img
+                src="https://img.calcgospel.top/PicList/202512/c9ba5099657621ce60b55f0cfb0e7457.png"
+                class="w-6 h-6 rounded-full"
+            />
+            <span class="text-xs text-slate-600 tracking-wide">
+                微积分福音 · 卓永鸿老师制作
+            </span>
+        </div>
+    </div>
+</footer>
 
 </body>
 </html>
